--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "eslint-plugin-react-refresh": "^0.4.23",
     "globals": "^16.4.0",
     "prettier": "^3.6.2",
+    "prettier-plugin-tailwindcss": "^0.6.14",
     "typescript": "~5.9.3",
     "typescript-eslint": "^8.46.0",
     "vite": "npm:rolldown-vite@7.1.16"
