--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
   "dependencies": {
     "@leeoniya/ufuzzy": "^1.0.19",
     "@tailwindcss/vite": "^4.1.14",
-    "react": "^19.2.0",
-    "react-dom": "^19.2.0",
+    "react": "^19.3.0-canary-06fcc8f3-20251009",
+    "react-dom": "^19.3.0-canary-06fcc8f3-20251009",
     "tailwindcss": "^4.1.14"
   },
   "devDependencies": {
