--- a/package.json
+++ b/package.json
@@ -12,15 +12,15 @@
   "dependencies": {
     "@leeoniya/ufuzzy": "^1.0.19",
     "@tailwindcss/vite": "^4.1.14",
-    "react": "^19.3.0-canary-06fcc8f3-20251009",
-    "react-dom": "^19.3.0-canary-06fcc8f3-20251009",
+    "react": "^19.3.0-canary-ead92181-20251010",
+    "react-dom": "^19.3.0-canary-ead92181-20251010",
     "tailwindcss": "^4.1.14"
   },
   "devDependencies": {
     "@eslint/js": "^9.37.0",
-    "@types/node": "^24.7.1",
+    "@types/node": "^24.7.2",
     "@types/react": "^19.2.2",
-    "@types/react-dom": "^19.2.1",
+    "@types/react-dom": "^19.2.2",
     "@vitejs/plugin-react": "^5.0.4",
     "babel-plugin-react-compiler": "^1.0.0",
     "eslint": "^9.37.0",
@@ -31,10 +31,10 @@
     "prettier": "^3.6.2",
     "prettier-plugin-tailwindcss": "^0.6.14",
     "typescript": "~5.9.3",
-    "typescript-eslint": "^8.46.0",
-    "vite": "npm:rolldown-vite@7.1.16"
+    "typescript-eslint": "^8.46.1",
+    "vite": "npm:rolldown-vite@^7.1.17"
   },
   "overrides": {
-    "vite": "npm:rolldown-vite@7.1.16"
+    "vite": "npm:rolldown-vite@^7.1.17"
   }
 }
