--- a/package.json
+++ b/package.json
@@ -11,30 +11,30 @@
   },
   "dependencies": {
     "@leeoniya/ufuzzy": "^1.0.19",
-    "@tailwindcss/vite": "^4.1.14",
-    "react": "^19.3.0-canary-ead92181-20251010",
-    "react-dom": "^19.3.0-canary-ead92181-20251010",
-    "tailwindcss": "^4.1.14"
+    "react": "^19.3.0-canary-408b38ef-20251023",
+    "react-dom": "^19.3.0-canary-408b38ef-20251023"
   },
   "devDependencies": {
-    "@eslint/js": "^9.37.0",
-    "@types/node": "^24.7.2",
+    "@eslint/js": "^9.38.0",
+    "@tailwindcss/vite": "^4.1.16",
+    "@types/node": "^24.9.1",
     "@types/react": "^19.2.2",
     "@types/react-dom": "^19.2.2",
-    "@vitejs/plugin-react": "^5.0.4",
+    "@vitejs/plugin-react": "^5.1.0",
     "babel-plugin-react-compiler": "^1.0.0",
-    "eslint": "^9.37.0",
+    "eslint": "^9.38.0",
     "eslint-plugin-react": "^7.37.5",
-    "eslint-plugin-react-hooks": "^7.0.0",
-    "eslint-plugin-react-refresh": "^0.4.23",
+    "eslint-plugin-react-hooks": "^7.0.1",
+    "eslint-plugin-react-refresh": "^0.4.24",
     "globals": "^16.4.0",
     "prettier": "^3.6.2",
-    "prettier-plugin-tailwindcss": "^0.6.14",
+    "prettier-plugin-tailwindcss": "^0.7.1",
+    "tailwindcss": "^4.1.16",
     "typescript": "~5.9.3",
-    "typescript-eslint": "^8.46.1",
-    "vite": "npm:rolldown-vite@^7.1.17"
+    "typescript-eslint": "^8.46.2",
+    "vite": "npm:rolldown-vite@^7.1.20"
   },
   "overrides": {
-    "vite": "npm:rolldown-vite@^7.1.17"
+    "vite": "npm:rolldown-vite@^7.1.20"
   }
 }
